--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
   <meta charset="UTF-8" />
   <title>Mini App MVP</title>
   <link rel="stylesheet" href="style.css" />
+  <!-- Подключаем Leaflet через CDN -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 </head>
 <body>
-  <div id="app">Здесь будет карта Leaflet</div>
-  <script src="main.js"></script>
+  <div id="map"></div>
+  <script>
+    // Создаём карту
+    const map = L.map('map').setView([44.6, 37.7], 7);
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      attribution: '&copy; OpenStreetMap contributors'
+    }).addTo(map);
+  </script>
 </body>
 </html>
